<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:padding="16dp"
        android:background="@drawable/login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.auth.SignUpActivity"
        >


        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:text="Create an account"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:secondaryColor ="@color/white"
            app:primaryColor="@color/white"
            app:iconSignifier="@drawable/ic_user"
            app:labelText="@string/username">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:secondaryColor ="@color/white"
            app:primaryColor="@color/white"
            app:iconSignifier="@drawable/ic_email_black"
            app:labelText="@string/email">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:secondaryColor ="@color/white"
            app:primaryColor="@color/white"
            app:iconSignifier="@drawable/ic_flag"
            app:enabled="false"
            app:labelText="@string/country">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:text="Nigeria"
                android:textColor="@color/white"
                />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/pwd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:secondaryColor ="@color/white"
            app:primaryColor="@color/white"
            app:iconSignifier="@drawable/ic_lock"
            app:labelText="@string/password">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:secondaryColor ="@color/white"
            app:primaryColor="@color/white"
            app:iconSignifier="@drawable/ic_lock"
            app:labelText="@string/re_password">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/finish_button"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:text="Or"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_twitter"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:src="@drawable/ic_facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:src="@drawable/ic_google_plus"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:textSize="15dp"
                android:text="By continuing you agree to MyTrbox"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="15dp"
                    android:text="Terms of use"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="15dp"
                    android:text=" and "
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="15dp"
                    android:text="Privacy Policy"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"                android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>